--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Analysis Study/Data/Raw Qualtrics Data/
 Analysis Study/Data/preprocessing codes.R
 Analysis Study/Analysis/%
 Analysis Study/Analysis/tables/
+Analysis Study/Analysis/scr/
