--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Analysis Study/Data/preprocessing codes.R
 Analysis Study/Analysis/%
 Analysis Study/Analysis/tables/
 Analysis Study/Analysis/scr/
+*.Rhistory
