--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Analysis Study/Analysis/%
 Analysis Study/Analysis/tables/
 Analysis Study/Analysis/scr/
 *.Rhistory
+Analysis Study/Analysis/edit plot.odg
